Added dashboard page

--- a/src/sidepanel.html
+++ b/src/sidepanel.html
@@ -303,7 +303,7 @@
           <span id="saveStatusText">Ready</span>
         </div>
         <div class="actions">
-          <button class="btn" id="exportBtn">Export</button>
+          <button class="btn" id="viewAllBtn">View all notes</button>
           <button class="btn danger" id="clearBtn">Clear</button>
         </div>
       </div>
