Allow notes edits in the dashboard

--- a/src/sidepanel.html
+++ b/src/sidepanel.html
@@ -226,6 +226,10 @@
       font-size: 11px;
       color: #666;
     }
+
+    .footer-note {
+      font-size: 10px;
+    }
     
     .storage-info {
       display: flex;
@@ -342,7 +346,7 @@
   <div class="footer">
     <div class="storage-info">
       <span id="storageInfo">Storage: Calculating...</span>
-      <span>Alt+N to save</span>
+      <span class="footer-note">Set a keyboard shortcut in your browser to toggle this side pane. <a href="#" id="shortcutsLink">Manage shortcuts</a></span>
     </div>
   </div>
   
