Misc UI/UX imporvements

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>sideNote Dashboard</title>
+  <title>PageNote Dashboard</title>
   <style>
     * {
       margin: 0;
@@ -233,7 +233,7 @@
   <div class="page">
     <div class="header">
       <div class="title">
-        <h1>sideNote Dashboard</h1>
+        <h1>PageNote Dashboard</h1>
         <p>All your notes across the web, in one place.</p>
       </div>
       <div class="header-actions">
